test/parser/closure-lambda.b3.expect
Error:
24:     forall j: int trigger SeqIndex(%s, j)
                              ^
expected '}'

